--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
             <ul class="certificate-list has-scrollbar">
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/Bangkit Certificate.png"
+                  alt="Bangkit Academy 2024 Batch 1 Certificate" onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/Certificate/E-Piagam_Equipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
                   onclick="showCertificate(this)" />
               </li>
@@ -295,11 +300,6 @@
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/Certificate/ilovepdf_merged (1)_page-0001.jpg"
                   alt="Dicoding Memulai Pemrograman Dengan Kotlin Certificate" onclick="showCertificate(this)" />
-              </li>
-              <li class="certificate-item">
-                <img style="cursor: pointer; max-width: 400px; height: auto;"
-                  src="./assets/images/Certificate/ilovepdf_merged (1)_page-0002.jpg"
-                  alt="Dicoding Belajar Membuat Aplikasi Androud Pemula Certificate" onclick="showCertificate(this)" />
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
