--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img style="border-radius: 20px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih" width="80">
+          <img style="border-radius: 20px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih Photo" width="80">
         </figure>
 
         <div class="info-content">
