--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img style="border-radius: 20px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih Photo" width="80">
+          <img style="border-radius: 14px" src="./assets/images/my-avatar.png" alt="M Ayash Al-fatih Photo" width="80">
         </figure>
 
         <div class="info-content">
@@ -124,11 +124,14 @@
               justify-content: center;
             ">
           <li class="social-item" style="display: flex; align-items: center">
-            <a href="https://www.instagram.com/ayash.af/" class="social-link" target="_blank"
-              style="display: flex; align-items: center">
-              <ion-icon name="logo-instagram" style="margin-right: 5px"></ion-icon>
-              <p style="margin: 0">Instagram</p>
-            </a>
+            <div class="resume-center">
+              <div class="resume-actions">
+                <button class="form-btn" onclick="openResumeOverlay()">
+                  <ion-icon name="document-text-outline"></ion-icon>
+                  <span>Ayash's CV</span>
+                </button>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
@@ -565,6 +568,10 @@
       </article>
     </div>
   </main>
+  <!-- Overlay Structure -->
+  <div id="resumeOverlay" class="overlay" onclick="closeResumeOverlay()">
+    <iframe id="resumeIframe" src="" frameborder="0" onclick="event.stopPropagation()"></iframe>
+  </div>
   <!--
     - custom js link
   -->
