make the iframe allow fullscreen

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
   </main>
   <!-- Overlay Structure -->
   <div id="resumeOverlay" class="overlay" onclick="closeResumeOverlay()">
-    <iframe id="resumeIframe" src="" frameborder="0" onclick="event.stopPropagation()"></iframe>
+    <iframe id="resumeIframe" src="" frameborder="0" onclick="event.stopPropagation()" allowfullscreen></iframe>
   </div>
   <!--
     - custom js link
