--- a/index.html
+++ b/index.html
@@ -348,11 +348,170 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
-        <!-- Embed PDF here -->
-        <div class="pdf-container">
-          <iframe id="resumeIframe" src="./assets/files/Muhammad Ayash Al-fatih-resume newest.pdf" frameborder="0"
-            allowfullscreen></iframe>
-        </div>
+        <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Education</h3>
+          </div>
+
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">
+                Muhammadiyah University Of Yogyakarta
+              </h4>
+
+              <span>2021 — Now</span>
+
+              <p class="timeline-text">
+                I am currently pursuing a Bachelor's degree in Information
+                Technology at Muhammadiyah University Of Yogyakarta. I have
+                been learning a wide range of programming concepts and
+                technologies, including web development, mobile app
+                development, UI/UX design, data science, and more.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">
+                Thoriq bin Ziyad Senior High School
+              </h4>
+
+              <span>2018 — 2021</span>
+
+              <p class="timeline-text">
+                During my time at Thoriq bin Ziyad Senior High School, I
+                developed an interest in graphic design. I joined the student
+                council and participated in several local competitions.
+              </p>
+            </li>
+          </ol>
+        </section>
+
+        <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">KMTI Web Development</h4>
+
+              <span>2021 - 2022</span>
+
+              <p class="timeline-text">
+                Since 2021, I've been building and maintaining the KMTI website, which improved my web development,
+                client communication, project management, teamwork, and problem-solving skills.
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Mobile App Competition</h4>
+
+              <span>2022</span>
+
+              <p class="timeline-text">
+                In 2022, I developed a Flutter app for an agriculture-themed competition. The app lets users buy/sell
+                products, access news, and view community features, schedules, and weather. This experience enhanced my
+                mobile app development skills."
+              </p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Assistant Lecturer</h4>
+              <span>September 2023 - Present</span>
+              <p class="timeline-text">Universitas Muhammadiyah Yogyakarta, Yogyakarta, Indonesia</p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Mobile Development Cohort at Bangkit Academy 2024</h4>
+              <span>February 2024 - Present</span>
+              <p class="timeline-text">Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka</p>
+            </li>
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Chief Technology Officer</h4>
+              <span>February 2024 - Present</span>
+              <p class="timeline-text">PT Bumantara Harapan Bersama, Hegarmanah, Kec. Jatinangor, Kab. Sumedang,
+                Provinsi Jawa Barat</p>
+            </li>
+          </ol>
+        </section>
+
+        <section class="skill">
+          <h3 class="h3 skills-title">My skills</h3>
+
+          <ul class="skills-list content-card">
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">HTML, CSS, JavaScript</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 40%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Flutter</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Web & App design</h5>
+                <data value="60">60%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Graphic design</h5>
+                <data value="40">40%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 30%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Public Speaking</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%"></div>
+              </div>
+            </li>
+
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Problem Solving</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%"></div>
+              </div>
+            </li>
+          </ul>
+        </section>
       </article>
 
       <!--
