--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
               </li>
               <li class="certificate-item">
                 <img style="cursor: pointer; max-width: 400px; height: auto;"
+                  src="./assets/images/Certificate/MSIB Certificate.png" alt="MSIB Certificate"
+                  onclick="showCertificate(this)" />
+              </li>
+              <li class="certificate-item">
+                <img style="cursor: pointer; max-width: 400px; height: auto;"
                   src="./assets/images/Certificate/E-Piagam_Equipe_233-1 2-2.png" alt="Equipe PKMM Certificate"
                   onclick="showCertificate(this)" />
               </li>
