--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">M Ayash Al-fatih</h1>
+          <h1 class="name" title="Muhammad Ayash Al-fatih">M Ayash Al-fatih</h1>
           <p style="font-weight: bold" class="title">IT Student</p>
         </div>
 
